--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
   flex-direction: column;
+}
+.name{
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.header{
+  background-color: black;
   color: white;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  padding: 15px;
+  font-weight: bold;
+  font-size: 45px;
+}
+.search{
+  display: flex;
+  flex-direction: row;
+  padding: 15px 15px;
+  border-radius: 7px;
+  margin-left: 20px;
+  width: 30%;
+  background-color: white;
+}
+input{
+   color: black;
+   font-size: 16px;
+   font-weight: bold;
+   border: none;
+   margin-left: 10px;
+   height: 35px;
+   border-radius: 6px;
+}
+button{
+  height: 35px;
+  border: 3px solid black;
+  border-radius: 6px;
+  width: 70px;
+  background-color:white;
+  color: black;
+  font-weight: bold;
+}
+.col-2{
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  width: 280px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
